# sips

./: .gitignore  LICENCE  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sips/: __init__.py
tests/: test_version.py
